# keyspec

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yaml  automerge.yaml  release.yaml
requirements/: test.txt
src/keyspec/: __init__.py  core.py
tests/: conftest.py  test_counter.py  test_example.py  test_expiration.py
